[package]
name = "p9813"
version = "0.2.0"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A library for the P9813 RGB controller"
documentation = "https://docs.rs/p9813"
repository = "https://github.com/reitermarkus/p9813-rs"
homepage = "https://github.com/reitermarkus/p9813-rs"
keywords = ["embedded-hal", "spi"]
categories = ["no-std", "embedded", "hardware-support"]

[dependencies]
embedded-hal = "1"

[dev-dependencies]
rand = "0.8"
embedded-hal-mock = "0.10"

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
rppal = { version = "0.16", features = ["hal"] }

[patch.crates-io]
rppal = { git = "https://github.com/reitermarkus/rppal", branch = "embedded-hal-1" }
